# sample-synthetic-document-generator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTEXT.md  NOTICE.txt  README.md  pdf_synth_bedrock.py  pocsynth.spec  pyproject.toml  requirements.txt
docs/: architecture.html
docs/adr/: 0001-native-bedrock-extraction.md  0002-toolconfig-only-extraction.md  0003-four-stage-pipeline.md  0004-value-distributions.md  0005-pii-guard.md  0006-typed-fields-coercion.md  0007-estimate-covers-paid-stages.md  0008-schema-from-prompt.md  0009-demo-ui.md  0010-safety-verification.md  0011-one-shot-safe-by-default.md
docs/guides/: secure-prototyping-customer.md  secure-prototyping-sa.md
docs/plan/: review-metabase-dataset-generator.md  secure-prototyping-prd.md  structured-data-support.md
docs/research-notes/: 01-overview.md  02-generation-methods.md  03-quality-and-representativeness.md  04-compliance-privacy-bias.md  05-references.md  06-demo-data-kit.md  07-faker.md  08-langextract.md  README.md
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  demo-pii-proof.py  demo-variant-diff.py  generate-eval-fixtures.py  generate-skill-script.py  run-skill-evals.py
skills/pocsynth/: RECIPES.md  SKILL.md  pocsynth.py
skills/pocsynth/agents/: grader.md
skills/pocsynth/evals/: evals.json
skills/pocsynth/evals/fixtures/: README.md  output.html
skills/synth-data/: SKILL.md
skills/synth-data/evals/: evals.json
src/pocsynth/: __init__.py  __main__.py  aws.py  bedrock.py  cli.py  comprehend.py  core.py  errors.py  extract.py  generate.py  output.py  pdf.py  pricing.json  pricing.py  prompts.py  run.py  schema.py  schemagen.py  textutil.py  validate.py  verify.py
src/pocsynth/presets/: __init__.py  ad_campaign.json  b2b_saas.json  commercial_leases.json  contact_center_transcripts.json  crm_contacts.json  ecommerce_orders.json  financial_transactions.json  healthcare_lite.json  insurance_claims.json  knowledge_corpus.json  loyalty_pos.json  product_reviews.json  security_telemetry.json  support_tickets.json  utility_meter.json
src/pocsynth/ui/: __init__.py  app.py
tests/: conftest.py
tests/live/: test_live_aws.py
tests/scenarios/: conftest.py  test_cli_demo_scenarios.py  test_sim_inspired_scenarios.py  test_ui_demo_scenarios.py  test_ui_safety_panel.py
tests/unit/: test_aws.py  test_cli.py  test_cli_paid.py  test_cli_structured.py  test_estimate_cli.py  test_estimate_paid_stages.py  test_generate.py  test_get_pdf_file.py  test_helpers.py  test_output.py  test_presets.py  test_pricing.py  test_process_page.py  test_run.py  test_run_conversion.py  test_run_extraction.py  test_run_schema.py  test_scan_for_pii.py  test_schema.py  test_shim.py  test_skill_script.py  test_skill_script_perf.py  test_translate_aws_error.py  test_validate.py  test_verify.py
