[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocsynth"
version = "0.1.0"
description = "PoC synthetic-document generator CLI: convert PDFs to synthetic HTML/Markdown via Amazon Bedrock with an optional Amazon Comprehend PII audit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT-0" }
authors = [{ name = "Brian Maguire" }]
keywords = ["aws", "bedrock", "pdf", "synthetic-data", "pii", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "boto3>=1.42,<2",
  "pymupdf>=1.27,<2",
  "beautifulsoup4>=4.14,<5",
  "requests>=2.33,<3",
  "html2text>=2025.4.15",
  "charset-normalizer>=3.4,<4",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "faker>=37,<38",
]

[project.optional-dependencies]
# Demo web UI only. NEVER imported by the CLI, the offline pipeline, or the
# bundled `uv run --script` skill — install with `uv tool install '.[ui]'`.
ui = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]

[project.scripts]
pocsynth = "pocsynth.cli:app"

# [project.urls] intentionally omitted in the public release.
# Add a Homepage URL pointing at the public repository once published.

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.6",
  "stickytape>=0.2.1",
  # For exercising the optional [ui] extra in tests (FastAPI TestClient needs httpx).
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
]
pyinstaller = [
  "pyinstaller>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pocsynth"]

[tool.hatch.build.targets.wheel.force-include]
"src/pocsynth/pricing.json" = "pocsynth/pricing.json"
"src/pocsynth/presets" = "pocsynth/presets"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Defaults plus T20 (no-print).
select = ["E", "F", "W", "I", "T20"]

[tool.ruff.lint.per-file-ignores]
# Tests may use print() freely.
"tests/**" = ["T201", "T203"]
# The deprecation shim is a top-level script; stdout is fine there.
"pdf_synth_bedrock.py" = ["T201"]
# Operational scripts print to stdout; that's their job.
"scripts/**" = ["T201", "T203"]
# The bundled skill script is machine-generated from src/pocsynth/.
# Do not lint; changes go via `scripts/generate-skill-script.py`.
"skills/pocsynth/pocsynth.py" = ["ALL"]
# The demo UI embeds HTML/CSS/font-URL templates as string literals; long
# lines there are markup, not code. Logic in this file still obeys E501 in review.
"src/pocsynth/ui/app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
markers = [
  "live: tests that make real AWS calls (Bedrock, Comprehend); excluded by default",
]
